Add recycle view to main activity

--- a/logiui/src/main/res/layout/activity_main.xml
+++ b/logiui/src/main/res/layout/activity_main.xml
@@ -59,5 +59,10 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/main_card_recycle_logs"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
     </LinearLayout>
 </RelativeLayout>
